--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>O pH, acidez e basicidade das soluções</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
-
+ 
 	<body>
 		<header>
-			<h1></h1>
+			<h1 id="titulo">O que é pH?</h1>
 		</header>
 		<img src="">
 		<div >
