--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
  
-	<body>
+	<body class="cor">
 		<header>
 			<h1 id="titulo">O que é pH?</h1>
 		</header>
